wwwroot/css/rsvp.css
.rsvp {
    margin-top: 25px;
}

.rsvp h1 {
    font-family: 'PlayfairDisplay-Italic';
    color: #df6b72;
    font-size: 50px;
    text-align: center;
}

.rsvp h2 {
    font-family: "PlayfairDisplay-Black";
    color: #4e4e4e;
    font-size: 35px;
    text-align: center;
}

.rsvp p {
    text-align: center;
    font-family: "Karla";
    color: #777673;
    width: 50%;
    margin:auto;
}

.rsvp form {
    margin-top:25px;
}

.rsvp .button {
    margin-top:25px;
    width: 100%;
}

.rsvp .large-6 {
    text-align: center;
    margin-bottom: 20px;
}

.rsvp label {
    font-family: "Karla";
    font-size: 1rem;
}

.rsvp .button {
    color: #000000;
    background-color: transparent;
    border-color: #000000;    
}

.rsvp .button:hover {
    background-color: #f0f0f0;
}

